--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							Having a professional experience in a techno-commercial role in railways industry, I have good understanding of Finances, Product Development, and Formal Communications. 
 							Graduating from highly technical electrical engineering background, I worked in a techno commercial role with a decent performance, which highlights my abilites as a 
 							quick learner and highly adaptable. I am curious to learn about new fields, and instead of seeing them as a challenge, I rather see them as opportunity to learn new skills.
-							Over the years I have worked with many different teams, and have developed good communication and interpersonal skills which I find very handy whenever I am suppose to work with a new individual.
+							Over the years I have worked with many different teams, and have developed good communication and interpersonal skills which I find very handy whenever I am supposed to work with a new individual.
 							I enjoy music and have done training on guitar and I also taught beginner students alongside my teacher, when I was in Bangalore. I like reading and mediation, 
 							and in my free time I like playing football/soccer and badminton. My latest interest is in swimming, and it is almost developed like a hobby since December'22. 
 							Below sections highlights the projects that I have done, my professional experience, my educational background and skills.
