--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							quick learner and highly adaptable. I am curious to learn about new fields, and instead of seeing them as a challenge, I rather see them as opportunity to learn new skills.
 							Over the years I have worked with many different teams, and have developed good communication and interpersonal skills which I find very handy whenever I am supposed to work with a new individual.
 							I enjoy music and have done training on guitar and I also taught beginner students alongside my teacher, when I was in Bangalore. I like reading and mediation, 
-							and in my free time I like playing football/soccer and badminton. My latest interest is in swimming, and it is almost developed like a hobby since December'22. 
+							and in my free time I like playing football/soccer and badminton.
 							Below sections highlights the projects that I have done, my professional experience, my educational background and skills.
 						</p>
 						<!-- Featured Post -->
@@ -88,7 +88,43 @@
 						<!-- Projects -->
 							<h2>Projects</h2>
 							<section class="posts">
-								
+								<article>
+									<header>
+										<span class="date">March 2023</span>
+										<h2><a href="generic.html">Camera Calibration, Image transformation and projection<br />
+										</a></h2>
+									</header>
+									<a href="generic.html/Kuka" class="image main"><img src="images/Stitching1_2.png" alt="" /></a>
+									<p> A combination of projects implementing Camera calibration, homography and Hough transform techniques</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/VKSingh03/Hough-Transform-and-Homography-.git" target="_blank" class="button large">Calibration Project</a></li>
+										<li><a href="https://github.com/VKSingh03/Hough-Transform-and-Homography-.git" target="_blank" class="button large">Homography Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">March 2023</span>
+										<h2><a href="generic.html">Implemented Path Planning algorithms for Non-Holonomic Constraints<br />
+										</a></h2>
+									</header>
+									<a href="generic.html" class="image main"><img src="images/AStar_differential.png" alt="" /></a>
+									<p> This project focus on implementing the differential drive contstraints for planning algorithms. Implemented A* algorithm and simulated on Turtlebot3 using ROS1 and Gazebo.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/VKSingh03/astar_turtlebot_ros_noetic.git" target="_blank" class="button large">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">February 2023</span>
+										<h2><a href="generic.html">Trajectory Tracking and 3D Plane Fitting<br />
+										</a></h2>
+									</header>
+									<a href="generic.html" class="image main"><img src="images/ransac.png" alt="" /></a>
+									<p> Implemented trajectory tracking on a moving object in a video using classical computer vision techniques. Also implemented trajectory curve fitting</p> 
+									<ul class="actions special">
+										<li><a href="https://github.com/VKSingh03/Trajectory-tracking-and-3D-plane-fitting.git" target="_blank" class="button large">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">December 2022</span>
