Updated Home page

--- a/index.html
+++ b/index.html
@@ -189,6 +189,21 @@
 								</article>
 								<article>
 									<header>
+										<span class="date">April 2020</span>
+										<h2><a href="generic.html">Space Vector PWM Controller for 3-phase grid-connected PV System<br />
+										</a></h2>
+									</header>
+									<a href="generic.html" class="image fit"><img src="images/SVPWM.png" alt="" /></a>
+									<p>Designed a novel current based controller for integrating the primary grid with a local grid of photovoltaic system. The
+										system focused on reducing the switching transients while shifting the power source from primary to secondary and
+										vice-versa.</p>
+									<ul class="actions special">
+										<li><a href="https://drive.google.com/file/d/118oCR691uQ5gO3-4zF5hTdOTk9spHf-l/view?usp=sharing" target="_blank" class="button">View Project</a></li>
+										
+									</ul> 
+								</article>
+								<article>
+									<header>
 										<span class="date">April 2019</span>
 										<h2><a href="generic.html">SAE Aerodesign West 2019<br />
 										</a></h2>
@@ -225,15 +240,15 @@
 											<h3>Buyer at ALSTOM Transport India Limited</h3>
 											<p> <strong>SKILLS Learnt:</strong> Contract negotiation, price negotiation, component pricing, global sourcing, supplier development, quality and capacity assessment for suppliers, formal communication, team management, supplier management and relationship development, customer handling, pricing analytics, Inventory management, SAP ARIBA</p>
 											<ul>
-												<li>Brought in approx. ~1.5 Million Euros in savings with successful localization of Brake system Test bench equipments in India.</li>
+												<li>Brought in approx. ~1.5 Million Euros in savings by successful localization of Brake system Test bench equipments in India.</li>
 												<li>This ended ALSTOMs dependency on OEMs for Test bench delivery, and also set a benchmark for Test bench equipments pricing within ALSTOMs.</li>
-												<li>In this project I managed the complete sourcing package, including supplier development, contracts and price negotiations, purchase order releases, delivery within timeline, and commissioning support. </li>
+												<li>In this project I managed the complete sourcing package, including supplier selection and development, contracts and price negotiations, purchase order releases, delivery within timeline, and commissioning support. </li>
 												<li>As a Buyer, I also handled the localization of Parking Brake release mechanisms for the first time with Indian suppliers.</li>
-												<li>This project started as a trial for our Lucknow metro, but the final developed product were so good, and efficient that we onboarded the supplier as a panel supplier and were given 4 new projects under me. The developed part was standardised for all upcoming projects.</li>
+												<li>This project started as a trial for our Lucknow metro, but the final developed product was so good and efficient that we onboarded the supplier as a panel supplier and were given 4 new projects under me. The developed part was standardised for all upcoming projects.</li>
 												<li>Other than the above 2 projects, I managed the Quality and Engineering claims settlement with suppliers for projects under warranty, for all the subsystem components.</li>
 												<li>I was also responsible for service requirements sourcing and purchase, and developing suppliers locally to address all project needs.</li>
-												<li>As part of above responsibility, I onboarded multiple supplier for investigation in ALSTOM Supplier List, and some were declared included in panel while I was at ALSTOM.</li>
-												<li>Overall, I supported metro projects of Lucknow, Kochi, Chennai, DMRC RS11, ELoco. And also partially supported projects in Bangkok, Singapore, Kuala Lumpur as and when the need arised.</li>
+												<li>As part of above responsibility, I onboarded multiple supplier for investigation in ALSTOM Supplier List, and some were included in panel while I was at ALSTOM.</li>
+												<li>Overall, I supported metro projects of Lucknow, Kochi, Chennai, DMRC RS11, and ELoco. I also partially supported projects in Bangkok, Singapore, and Kuala Lumpur as and when the need arised.</li>
 											</ul>
 							</section>
 
