Updated projects from Spring'23

--- a/generic.html
+++ b/generic.html
@@ -34,6 +34,7 @@
 						<li><a href="https://www.linkedin.com/in/vineet-kumar-singh-341a68174/" target="_blank" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 						<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 						<li><a href="https://github.com/VKSingh03" target="_blank"  class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://youtube.com/@vineetkumarsingh7823" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 					</ul>
 				</nav>
 
