--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Hi. I am Vineet Singh<br />
 						</h1>
 						<p>A Roboticist, currently pursuing Master's in Robotics at University of Maryland, College Park. <br />
-						Skilled in ROS, C++, Python, and Machine Learning. 
+						Skilled in ROS2, Machine Learning, and Computer Vision. 
 							<!-- <a href="https://www.linkedin.com/in/vineet-kumar-singh-341a68174/">@vsingh</a><br />-->
 						</p> 
 						<ul class="actions">
@@ -48,46 +48,63 @@
 							<li><a href="https://www.linkedin.com/in/vineet-kumar-singh-341a68174/" target="_blank" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 							<li><a href="https://github.com/VKSingh03" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://youtube.com/@vineetkumarsingh7823" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<h2>About me</h2>
-						<span class="image fit"><img src="images/Vinnet_pic.JPG" alt="" /></span>
-						<p>I am Vineet, a robotics enthusiast trying to find ways to apply principles of robotics in every industry. 
-							Having a professional experience in a techno-commercial role in railways industry, I have good understanding of Finances, Product Development, and Formal Communications. 
-							Graduating from highly technical electrical engineering background, I worked in a techno commercial role with a decent performance, which highlights my abilites as a 
-							quick learner and highly adaptable. I am curious to learn about new fields, and instead of seeing them as a challenge, I rather see them as opportunity to learn new skills.
-							Over the years I have worked with many different teams, and have developed good communication and interpersonal skills which I find very handy whenever I am supposed to work with a new individual.
-							I enjoy music and have done training on guitar and I also taught beginner students alongside my teacher, when I was in Bangalore. I like reading and mediation, 
-							and in my free time I like playing football/soccer and badminton.
+						<!-- <span class="image fit"><img src="images/Vinnet_pic.JPG" alt="" /></span> -->
+						<p>I am a robotics enthusiast with interest in Robotic control software design and Computer Vision. 
+							I am curious to learn about new fields, and instead of seeing them as a challenge, I use them as opportunities to learn new skills.
+							Over the years I have worked with many different teams, and have developed good communication and interpersonal skills which helps me to bond easily with new individuals.
 							Below sections highlights the projects that I have done, my professional experience, my educational background and skills.
 						</p>
 						<!-- Featured Post -->
 							<!-- <article class="post featured">
 								<header class="major">
-									<span class="date">December, 2022</span>
-									<h2><a href="#">KUKA LBR iiwa R820 Robot Modeling<br />
+									<span class="date">Feb - May, 2023</span>
+									<h2><a href="https://ariac.readthedocs.io/en/latest/competition/terminology.html">ARIAC 2023<br />
 									</a></h2>
-									<p> In this project, a model based on KUKA LBR iiwa R820 is created in SOLIDWORKS and simulated using ROS Noetic and Gazebo</p>
+									<p> Completed the ARIAC agility challenges for the event organized by NIST anually.</p>
 								</header>
 								<ul>
-									<li>A robot based on specification sheet of KUKA LBR iiwa R820 is designed in Solidworks with a custom designed end effector.</li>
-									<li>The model is converted to URDF and controllers are added for all the joints and a new URDF is generated using XACRO.</li>
-									<li>Algorithms for Forward and Inverse Kinematics is written from scratch using Python.</li>
-									<li>Publishers and Subscribers are written to appropriately control the robot.</li>
-									<li>Final simulation done in Gazebo where the robot picks up objects from one platform and places on another.</li>
+									<li>Designed a complete software system for a manufacturing assembly line having 2 different robots.</li>
+									<li>The Software control system is capable of handling uncertainties/agility challenges which includes handling faulty
+										parts, picking up parts from a moving conveyor belts, handling insufficient orders, and managing priority orders.</li>
+									<li>The entire code is written in C++ and uses ROS2 and MoveIt for control of robots and RVIZ for visualization.</li>									
+									<li>More than 4000 lines of code with proper C++ best practices, comments, and separate script and header files.</li>
 								</ul>
-								<a href="#" class="image main"><img src="images/662_final.png" alt="" /></a>
+								<a href="#" class="image main"><img src="images/ariac_image.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://youtu.be/dmnHMJKD2i4" class="button large">View Project</a></li>
 								</ul>
 							</article> -->
 
 						<!-- Projects -->
 							<h2>Projects</h2>
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">Feb - May, 2023</span>
+										<h2><a href="https://ariac.readthedocs.io/en/latest/competition/terminology.html">ARIAC 2023<br />
+										</a></h2>
+										<!-- <p> Completed the ARIAC agility challenges for the event organized by NIST anually.</p> -->
+									</header>
+									<!-- <ul>
+										<li>Designed a complete software system for a manufacturing assembly line having 2 different robots.</li>
+										<li>The Software control system is capable of handling uncertainties/agility challenges which includes handling faulty
+											parts, picking up parts from a moving conveyor belts, handling insufficient orders, and managing priority orders.</li>
+										<li>The entire code is written in C++ and uses ROS2 and MoveIt for control of robots and RVIZ for visualization.</li>									
+										<li>More than 4000 lines of code with proper C++ best practices, comments, and separate script and header files.</li>
+									</ul> -->
+									<a href="#" class="image main"><img src="images/ariac_image.png" alt="" /></a>
+									<p> Completed the ARIAC agility challenges for the annual competition organized by NIST.</p>
+									<ul class="actions special">
+										<li><a href="https://youtu.be/dmnHMJKD2i4" class="button large">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">March 2023</span>
@@ -366,6 +383,7 @@
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/vineet-kumar-singh-341a68174/" target="_blank" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 									<li><a href="https://github.com/VKSingh03" target="_blank"  class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://youtube.com/@vineetkumarsingh7823" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -377,7 +395,6 @@
 					</div> -->
 
 			</div>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
