--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 											<h3>Buyer at ALSTOM Transport India Limited</h3>
 											<p> <strong>SKILLS Learnt:</strong> Contract negotiation, price negotiation, component pricing, global sourcing, supplier development, quality and capacity assessment for suppliers, formal communication, team management, supplier management and relationship development, customer handling, pricing analytics, Inventory management, SAP ARIBA</p>
 											<ul>
-												<li>Brought in approx. ~1.5 Million Euros in savings by successful localization of Brake system Test bench equipments in India.</li>
+												<li>Brought in approx. ~1.5 Million Euros in cost avoidance by successful localization of Brake system Test bench equipments in India.</li>
 												<li>This ended ALSTOMs dependency on OEMs for Test bench delivery, and also set a benchmark for Test bench equipments pricing within ALSTOMs.</li>
 												<li>In this project I managed the complete sourcing package, including supplier selection and development, contracts and price negotiations, purchase order releases, delivery within timeline, and commissioning support. </li>
 												<li>As a Buyer, I also handled the localization of Parking Brake release mechanisms for the first time with Indian suppliers.</li>
