--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="">vsingh03@umd.edu</a></p>
+								<p><a href="">vineetvks360@gmail.com</a></p>
 							</section>
 							<!-- <section>
 								<h3>Social</h3>
