--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<section>
 							<h2>About me</h2>
 							<!-- <span class="image fit"><img src="images/Vinnet_pic.JPG" alt="" /></span> -->
-							<p>I am a robotics enthusiast with interest in Robotic control software design, Robot modeling, motion planning and Computer Vision. 
+							<p><span class="image left"><img src="images/Vinnet_pic.JPG" alt="" /></span>I am a robotics enthusiast with interest in Robotic control software design, Robot modeling, motion planning and Computer Vision. 
 								I am curious to learn about new fields, and instead of seeing them as a challenge, I use them as opportunities to learn new skills.
 								Over the years I have worked with many different teams, and have developed good communication and interpersonal skills which helps me to bond easily with new individuals.
 								My experiences vary in various fields which include electrical and electronics, aeromodelling, sourcing/procurement, robotics, and computer vision.
