--- a/generic.html
+++ b/generic.html
@@ -56,7 +56,7 @@
 				<nav id="nav">
 					<ul class="links">
 						<li ><a href="index.html">Overview</a></li>
-						<li class="active"><a href="generic.html">Project Details</a></li>
+						<li class="active"><a href="generic.html">Projects</a></li>
 						<li><a href="photo_gallery.html">Photo Gallery</a></li>
 						<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 					</ul>
