--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -26,7 +26,7 @@
 				<nav id="nav">
 					<ul class="links">
 						<li><a href="index.html">Overview</a></li>
-						<li><a href="generic.html">Project Details</a></li>
+						<li><a href="generic.html">Projects</a></li>
 						<li class="active"><a href="photo_gallery.html">Photo Gallery</a></li>
 					</ul>
 					<ul class="icons">
