Updated work experience. added dates

--- a/generic.html
+++ b/generic.html
@@ -423,7 +423,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>College Park<br />
+								<p>Rockville<br />
 								Maryland, USA 20740</p>
 							</section>
 							<section>
