--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<style>
+			.header-container {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+			}
+			.date {
+				font-size: 1em; /* Adjust the font size as needed */
+				color: #0b0a0a; /* Optional: change the color for better visibility */
+			}
+		</style>
+
 	</head>
 	<body class="is-preload">
 
@@ -67,7 +80,18 @@
 							<section>
 								<h2>Work Experience</h2>
 								<ol>
-									<li><h3>Teaching Assistant, University of Maryland College Park</h3>
+									<li>
+										<div class="header-container">
+											<h3>Robotics Intern, NextGlass LLC</h3>
+											<span class="date">July 2024 - Present</span>
+										</div>
+										<p> Working on automating the Vacuum Insulated Glass (VIG) fabrication process, and designing it's manufacturing line.</p>
+									</li>
+									<li>
+										<div class="header-container">
+											<h3>Teaching Assistant, University of Maryland College Park</h3>
+											<span class="date">Aug 2023 - May 2024</span>
+										</div>
 										<p> <strong>SKILLS:</strong> C++14, ROS2 (including services, actions, TF), planning scenes, MoveIt, Finite state machines, Software Control
 											architecture, knowledge representation, measurement science.</p>
 										<ul>
@@ -77,7 +101,11 @@
 											<li>Held weekly office hours for doubt clarifications and supporting students through assignments/projects. Also responsible for grading assignments/projects.</li>
 										</ul>
 									</li>
-									<li><h3>Buyer, ALSTOM Transport India Limited</h3>
+									<li>
+										<div class="header-container">
+											<h3>Buyer, ALSTOM Transport India Limited</h3>
+											<span class="date">Oct 2020 - Jul 2022</span>
+										</div>
 										<p> <strong>SKILLS:</strong> Contract negotiation, price negotiation, component pricing, global sourcing, supplier development, 
 											quality and capacity assessment for suppliers, formal communication, team management, supplier management and relationship 
 											development, customer handling, pricing analytics, Inventory management, SAP ARIBA</p>
@@ -93,14 +121,23 @@
 											<li>Overall, I supported metro projects of Lucknow, Kochi, Chennai, DMRC RS11, Agra-Kanpur, DMRC RS17 (tender) and other projects of ELoco, and RRTS. I also partially supported projects in Bangkok, Singapore, and Kuala Lumpur as and when the need arised.</li>
 										</ul>
 									</li>
-									<li><h3>Summer Training, TATA Power</h3>
+									<li>
+										<div class="header-container">
+											<h3>Summer Training, TATA Power</h3>
+											<span class="date">Jun 2019 - Jul 2019</span>
+										</div>
 										<ul>
 											<li>Analyzed the fault protection methodology and power transformer protection systems implemented at the power plant.</li>
 											<li>Documented a report on 3-phase protection systems including differential protection, earth fault, thermal and overcurrent
 												protection, use of Buchholz relay, and lightning arrestor.</li>
 										</ul>
 									</li>
-									<li><h3>Team Phoenix, NIT Jamshedpur</h3>
+									<li>
+										<div class="header-container">
+											<h3>Team Phoenix, NIT Jamshedpur</h3>
+											<span class="date">Nov 2016 - Jun 2020</span>
+										</div>
+										
 										<p> <strong>SKILLS Learnt:</strong>CAD, Model Fabrication, Electrical propulsion circuit design, Components testing procedures/rigs design, Radio based control, aerodynamics, team management.</p>
 										<ul>
 											<li>Member and Mentor at Team Phoenix: The official Aeromodelling team of NIT Jamshedpur.</li>
@@ -205,8 +242,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>College Park<br />
-								Maryland, USA 20740</p>
+								<p>Rockville<br />
+								Maryland, USA 20855</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
