--- a/generic.html
+++ b/generic.html
@@ -328,7 +328,7 @@
 						</ul>
 						<ul class="actions special">
 							<li><a href="https://youtu.be/hb3j3rEOt5o" target="_blank" class="button">SAE Flight video</a></li>
-							<li><a href="photo_gallery.html" target="_blank" class="button">Photo Gallary</a></li>
+							<li><a href="photo_gallery.html" target="_blank" class="button">Photo Gallery</a></li>
 						</ul> 
 					</article>
 					<hr>
@@ -370,7 +370,7 @@
 						</ul>
 
 						<ul class="actions special">
-							<li><a href="photo_gallery.html" target="_blank" class="button">Photo Gallary</a></li>
+							<li><a href="photo_gallery.html" target="_blank" class="button">Photo Gallery</a></li>
 						</ul>
 					</article>
 					<hr>
