--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<p><span class="image left"><img src="images/Vinnet_pic.JPG" alt="" /></span>I am a robotics enthusiast with interest in Robotic control software design, Robot modeling, motion planning and Computer Vision. 
 								I am curious to learn about new fields, and instead of seeing them as a challenge, I use them as opportunities to learn new skills.
 								Over the years I have worked with many different teams, and have developed good communication and interpersonal skills which helps me to bond easily with new individuals.
-								My experiences vary in various fields which include electrical and electronics, aeromodelling, sourcing/procurement, robotics, and computer vision.
+								My experiences vary in various fields which include model fabrication, electrical and electronics, aeromodelling, sourcing/procurement, robotics, and computer vision.
 							</p>
 						</section>
 
@@ -82,10 +82,16 @@
 								<ol>
 									<li>
 										<div class="header-container">
-											<h3>Robotics Intern, NextGlass LLC</h3>
-											<span class="date">July 2024 - Present</span>
+											<h3>Research Engineer, NextGlass LLC</h3>
+											<span class="date">Oct 2024 - Present</span>
 										</div>
-										<p> Working on automating the Vacuum Insulated Glass (VIG) fabrication process, and designing it's manufacturing line.</p>
+										<p> Researching on the increasing the production repeatability and reliability of a flexible seal Vacuum Insulated Glazing (VIG), developing the manufacturing process and designing an automated robotic line.</p>
+									
+										<div class="header-container">
+											<h3>Robotics Intern, NextGlass LLC</h3>
+											<span class="date">July 2024 - Sep 2024</span>
+										</div>
+										<p> Working on automating the Vacuum Insulated Glazing (VIG) fabrication process, and designing it's manufacturing line.</p>
 									</li>
 									<li>
 										<div class="header-container">
@@ -110,8 +116,7 @@
 											quality and capacity assessment for suppliers, formal communication, team management, supplier management and relationship 
 											development, customer handling, pricing analytics, Inventory management, SAP ARIBA</p>
 										<ul>
-											<li>Brought in approx. ~1.3 Million Euros in cost avoidance by successful localization of Brake system Test bench equipments in India.</li>
-											<li>This set a benchmark for Test bench equipments pricing for these subsystems within ALSTOM.</li>
+											<li>Brought in a significant cost avoidance (in MEur) by successful localization of Brake system Test bench equipments in India.</li>
 											<li>In this project, I managed the complete sourcing package, including supplier selection and development, contracts and price negotiations, purchase order releases, and delivery timeline. </li>
 											<li>Led the localization of Parking Brake release mechanisms for the first time with Indian suppliers.</li>
 											<li>This project started as a trial for Lucknow metro and later the supplier was onboarded and was awarded 4 new projects under me. The developed part was standardised for all upcoming projects.</li>
