--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 											<h3>Robotics Intern, NextGlass LLC</h3>
 											<span class="date">July 2024 - Sep 2024</span>
 										</div>
-										<p> Working on automating the Vacuum Insulated Glazing (VIG) fabrication process, and designing it's manufacturing line.</p>
+										<p> Worked on automating the Vacuum Insulated Glazing (VIG) fabrication process, and designing it's manufacturing line.</p>
 									</li>
 									<li>
 										<div class="header-container">
